# trio-parallel

./: .coveragerc  .flake8  .git_archival.txt  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  CHEATSHEET.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.APACHE2  LICENSE.MIT  MANIFEST.in  README.rst  check.sh  ci.sh  codecov.yml  docs-requirements.txt  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tools-requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  periodic.yml
_trio_parallel_workers/: __init__.py  _cheap_outcome.py  _funcs.py
docs/: Makefile  make.bat
docs/source/: conf.py  examples.rst  history.rst  index.rst  motivation.rst  reference.rst  test_examples.py
docs/source/_static/: custom.css
docs/source/examples/: async_parallel_pipeline.py  cache_warmup.py  cancellation.py  checkpointing.py  minimal.py  parallel_loops.py  parallel_map.py  single_use_workers.py
newsfragments/: 10.bugfix.rst  108.feature.rst  110.feature.rst  115.feature.rst  116.feature.rst  117.feature.rst  127.feature.rst  155.feature.rst  16.doc.rst  167.bugfix.rst  168.doc.rst  171.bugfix.rst  19.feature.rst  20.bugfix.rst  23.bugfix.rst  236.removal.rst  239.bugfix.rst  25.bugfix.rst  27.misc.rst  291.bugfix.rst  32.bugfix.rst  322.feature.rst  323.feature.rst  328.feature.rst  33.bugfix.rst  332.bugfix.rst  35.bugfix.rst  380.bugfix.rst  389.deprecated.rst  398.bugfix.rst  40.misc.rst  412.bugfix.rst  42.misc.rst  43.bugfix.rst  432.bugfix.rst  434.feature.rst  434.removal.rst  435.removal.rst  436.bugfix.rst  437.feature.rst  (+7 more)
requirements/: build.in  build.txt  coverage.in  coverage.txt  dev.in  dev.txt  docs.in  docs.txt  install.in  install.txt  lint.in  lint.txt  test.in  test.txt
trio_parallel/: __init__.py  _abc.py  _impl.py  _posix_pipes.py  _proc.py  _sint.py  _util.py  _version.py  _windows_cffi.py  _windows_pipes.py  _winows_pipes.py  _worker_processes.py  abc.py
trio_parallel/_tests/: _funcs.py  conftest.py  test_cache.py  test_defaults.py  test_impl.py  test_proc.py  test_run_sync.py  test_sint.py  test_worker.py  test_worker_processes.py
