[build-system]
requires = ["setuptools >= 45", "wheel", "setuptools_scm[toml] >= 6.0", "setuptools_scm_git_archive"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.towncrier]
package = "trio_parallel"
filename = "docs/source/history.rst"
directory = "newsfragments"
name = "trio-parallel"
underlines = ["-", "~", "^"]
issue_format = "`#{issue} <https://github.com/richardsheridan/trio-parallel/issues/{issue}>`__"

[tool.pytest.ini_options]
addopts = "--pyargs -W error -r a --verbose --cov --cov-config=pyproject.toml --cov-context=test"
xfail_strict = true
faulthandler_timeout = 60

[tool.coverage.run]
branch = true
source_pkgs = ["trio_parallel"]
disable_warnings = ["trace-changed"]  # for test_clean_exit_on_pipe_close

[tool.coverage.report]
precision = 1
exclude_lines = [
  "pragma: no cover",
  "abc.abstractmethod",
  "abstractmethod",
  ]

[tool.coverage.html]
show_contexts = true

[tool.coverage.paths]
source = ["trio_parallel/", "*/trio_parallel"]
