[metadata]
name = trio-parallel
version = attr: trio_parallel._version.__version__
description = CPU parallelism for Trio
url = https://github.com/richardsheridan/trio-parallel
long_description = file:README.rst
author = Richard Sheridan
author_email = richard.sheridan@gmail.com
license = MIT -or- Apache License 2.0
license_files = LICENSE.APACHE2, LICENSE.MIT
keywords = parallel, trio, async, dispatch
classifiers =
    License :: OSI Approved :: MIT License
    License :: OSI Approved :: Apache Software License
    Framework :: Trio
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries

[options]
packages = find:
include_package_data = True
install_requires =
    trio
    outcome
python_requires = >=3.6
