[metadata]
name = trio-parallel
description = CPU parallelism for Trio
url = https://github.com/richardsheridan/trio-parallel
long_description = file: README.rst
author = Richard Sheridan
author_email = richard.sheridan@gmail.com
license = MIT -or- Apache License 2.0
license_files = LICENSE LICENSE.APACHE2 LICENSE.MIT
keywords = parallel, trio, async, dispatch
classifiers =
    License :: OSI Approved :: MIT License
    License :: OSI Approved :: Apache Software License
    Framework :: Trio
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries

[options]
packages = find:
include_package_data = True
install_requires =
    trio >= 0.18.0
    outcome
    async_generator
    attrs >= 17.3.0
    cffi; os_name == 'nt' and implementation_name != 'pypy'
python_requires = >=3.6

[options.extras_require]
test =
    pytest
    pytest-trio
    pytest-cov
    coverage[toml]
docs =
    sphinx > 3.5.0
    sphinx_rtd_theme
    sphinxcontrib-trio
    towncrier